<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tyasw.myhikes.ContactsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15">

            <TableLayout
                android:id="@+id/dbTable"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableLayout>
        </TableRow>

        <TableRow
            android:id="@+id/buttonRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/contactsPreviousButton"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="previousStep"
                android:padding="8dp"
                android:text="@string/previous_string" />

            <Button
                android:id="@+id/contactsCancelButton"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/cancel_string" />

            <Button
                android:id="@+id/contactsNextButton"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="nextStep"
                android:padding="8dp"
                android:text="@string/next_string" />
        </TableRow>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>

