<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b5f8ff"
    android:orientation="vertical"
    tools:context="com.example.tyasw.myhikes.MapsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15">

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.example.tyasw.samplemapapp.MapsActivity" />
        </TableRow>

        <TableRow
            android:id="@+id/buttonRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/mapsPreviousButton"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="previousStep"
                android:padding="8dp"
                android:text="@string/previous_string" />

            <Button
                android:id="@+id/mapsCancelButton"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/cancel_string" />

            <Button
                android:id="@+id/mapsNextButton"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="nextStep"
                android:padding="8dp"
                android:text="@string/next_string" />
        </TableRow>
    </LinearLayout>

</RelativeLayout>