<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tyasw.myhikes.NotificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enter Message"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="14">

            <Button
                android:id="@+id/sendTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Send Text" />
        </TableRow>

        <TableRow
            android:id="@+id/buttonRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/notificationPreviousButton"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="previousStep"
                android:padding="8dp"
                android:text="@string/previous_string" />

            <Button
                android:id="@+id/notificationCancelButton"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/cancel_string" />

            <Button
                android:id="@+id/notificationFinishButton"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="nextStep"
                android:padding="8dp"
                android:text="@string/finish_string" />
        </TableRow>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>

