<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tyasw.myhikes.SuppliesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableRow
            android:id="@+id/newSupplyRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/supplyNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/supplyName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/supplyQuantityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Quantity"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/supplyQuantity"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/addSupplyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add" />

        </TableRow>

        <TableRow
            android:id="@+id/mainContentRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="14">

            <TableLayout
                android:id="@+id/dbTable"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableLayout>

        </TableRow>

        <TableRow
            android:id="@+id/buttonRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/suppliesPreviousButton"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="previousStep"
                android:padding="8dp"
                android:text="@string/previous_string" />

            <Button
                android:id="@+id/suppliesCancelButton"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/cancel_string" />

            <Button
                android:id="@+id/suppliesNextButton"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="nextStep"
                android:padding="8dp"
                android:text="@string/next_string" />
        </TableRow>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>

